--- a/src/html/template.html
+++ b/src/html/template.html
@@ -9,5 +9,9 @@
 <body>
     <h1>Testing WebPack Again</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur, pariatur?</p>
+    <section>
+        <h2>Title</h2>
+        <h3>Some more text is here</h3>
+    </section>
 </body>
 </html>
