--- a/src/html/template.html
+++ b/src/html/template.html
@@ -11,8 +11,8 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequuntur, pariatur?</p>
     <section>
         <h2>Title</h2>
-        <h3>Let practise!?</h3>
-        <button>Push here!!!</button>
+        <h3>Let practise!</h3>
+        <button>Push here?</button>
     </section>
 </body>
 </html>
